syntax = "proto3";

option go_package = "github.com/webitel/chat_manager/api/proto/storage";

package storage;

// import "const.proto";
// import "google/api/annotations.proto";

service MediaFileService {   
    rpc ReadMediaFileNA(ReadMediaFileRequest) returns (MediaFile) {}
}

message ReadMediaFileRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message MediaFile {
    int64 id = 1;
    int64 created_at = 2;
    // engine.Lookup created_by = 3;
    int64 updated_at = 4;
    // engine.Lookup updated_by = 5;

    string name = 6;
    int64 size = 7;
    string mime_type = 8;
}
